[package]
name = "smash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
crc32fast = "1.3.0"
memoffset = { version = "0.6.5", optional = true }
bitflags = "1.3.2"
num_enum = "0.5.6"
repr_weak = { path = "./repr_weak" }
sealed = "0.4.0"

[features]
default = ["type_assert"]
type_assert = ["memoffset"]
extras = [] # This feature is for exposing extra information based on research, not symbols
expose_hack = []